<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".DataActivity">


    <Button
            style="@style/Button"
            android:id="@+id/backup_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/backup_button_text"
            app:layout_constraintRight_toLeftOf="@id/restore_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    <Button
            style="@style/Button"
            android:id="@+id/restore_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/restore_button_text"
            app:layout_constraintLeft_toRightOf="@id/backup_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    <Button
            style="@style/Button"
            android:id="@+id/import_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/import_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>


    <org.osmdroid.views.MapView
            android:id="@+id/map"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/button_margin"
            app:layout_constraintTop_toBottomOf="@id/backup_button"
            app:layout_constraintBottom_toTopOf="@id/import_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>